--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/date-fns": "^2.6.0",
     "date-fns": "^2.28.0",
+    "formik": "^2.2.9",
     "material-ui": "^0.20.2",
     "moment-timezone": "^0.5.34",
     "mui": "^0.0.1",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.4.6",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2",
-    "yarn": "^1.22.17"
+    "yarn": "^1.22.17",
+    "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
