--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/date-fns": "^2.6.0",
+    "chart.js": "^3.7.0",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
+    "react-chartjs-2": "3.0.4",
     "react-data-table-component": "^7.4.6",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
